--- a/.azure-pipelines/common-steps.yml
+++ b/.azure-pipelines/common-steps.yml
@@ -5,17 +5,17 @@ steps:
   - checkout: self
     clean: true
 
-  - task: NodeTool@0
-    displayName: Use node 10
+  - task: UseNode@1
+    displayName: Use Node 16
     inputs:
-      versionSpec: "10.x"
+      version: "16.x"
 
   - task: NpmAuthenticate@0
     inputs:
       workingFile: .npmrc
 
-  - script: npm i -g npm@6.14.12 --force
-    displayName: Use npm version 6.14.12
+  - script: npm i -g npm@8.19.4 --force
+    displayName: Use npm version 8.19.4
 
   - bash: |
       npm ci
