Upgrading tmp to address security vulnerability

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "prompt": "^1.3.0",
     "read": "^1.0.6",
     "shelljs": "^0.8.5",
-    "tmp": "0.0.26",
+    "tmp": "^0.2.4",
     "tracer": "0.7.4",
     "util.promisify": "^1.0.0",
     "uuid": "^3.0.1",
