--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tfx-cli",
-  "version": "0.21.2",
+  "version": "0.21.3",
   "description": "CLI for Azure DevOps Services and Team Foundation Server",
   "repository": {
     "type": "git",
@@ -35,7 +35,7 @@
     "prompt": "^1.3.0",
     "read": "^1.0.6",
     "shelljs": "^0.8.5",
-    "tmp": "0.0.26",
+    "tmp": "^0.2.4",
     "tracer": "0.7.4",
     "util.promisify": "^1.0.0",
     "uuid": "^3.0.1",
